--- a/notes/零散笔记.md
+++ b/notes/零散笔记.md
@@ -76,3 +76,17 @@ Fiber reconciliation的工作循环具体如下：
 5. 把孩子或兄弟作为待处理节点，准备进入下一个工作循环。如果没有待处理节点（回到了workInProgress tree的根节点），工作循环结束
 
 通过每个节点更新结束时*向上归并effect list*来收集任务结果，reconciliation结束后，根节点的effect list里记录了包括DOM change在内的所有side effect
+
+
+
+从`beginWork`来看，在`beginWork`阶段，`updateHostComponent`的时候会执行`reconcileChildFibers`或者`mountChildFibers(`初始化的时候)。主要分为两部分，一部分是对`Context`的处理，一部分是根据`fiber`对象的`tag`类型，调用对应的update方法（**vdom diff的步骤就是在这里**）：
+
+1. 先更新classComponent的Instance，期间调用生命周期函数
+2. 根据shouldUpdate来判断是否需要更新
+3. 需要更新的话调用render()获得最新ReactElement
+4. 如果是新建节点直接mount，如果是更新类型则调用fiber协调算法
+5. `reconcileChildFibers`函数中主要是根据newChild类型，调用不同的Diff算法：`reconcileSingleElement、reconcileSinglePortal、reconcileSingleTextNode、reconcileChildrenArray`，在子节点上添加 `effectTag`记录变更类型如`placement`
+6. `reconcileSingleElement`的diff方式可参考：https://react.jokcy.me/book/flow/reconcile-children/single.html 。array子元素群的diff方式：https://react.jokcy.me/book/flow/reconcile-children/array.html
+7. commit阶段做的事情是拿到`reconciliation`阶段产出的`EffectList`，即所有更新工作，提交这些更新工作并调用渲染模块（react-dom）渲染UI。
+
+最后通过事件触发进入到commitAllHostEffects里进行dom操作步骤。
