--- a/notes/零散笔记.md
+++ b/notes/零散笔记.md
@@ -90,3 +90,9 @@ Fiber reconciliation的工作循环具体如下：
 7. commit阶段做的事情是拿到`reconciliation`阶段产出的`EffectList`，即所有更新工作，提交这些更新工作并调用渲染模块（react-dom）渲染UI。
 
 最后通过事件触发进入到commitAllHostEffects里进行dom操作步骤。
+
+
+
+>  如果任务被打断了怎么办？
+
+> TODO: 这里需要详解如何构造 WorkInProgress Tree 的策略。
